# htmlformat

./: README.md  pyproject.toml
.github/workflows/: ci.yml
htmlformat/: __init__.py  __main__.py  constants.py  parser.py  renderer.py
tests/: test_htmlformat.py
